# docs/swagger.json
@@ -5,7 +5,7 @@
         "title": "Alcotracker API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "Backend Dev",
+            "name": "Tom Manger",
             "email": "tommanger55@gmail.com"
         },
         "version": "1.0"
@@ -444,39 +444,7 @@
                 }
             }
         },
-        "/userinfo": {
-            "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Retrieve the profile of the current user",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Userinfo"
-                ],
-                "summary": "Get User Profile",
-                "operationId": "GetUserProfile",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/GenericResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Server or Database internal error",
-                        "schema": {
-                            "$ref": "#/definitions/GenericResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/userinfo/change-username": {
+        "/user/change-username": {
             "put": {
                 "security": [
                     {
@@ -499,7 +467,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userinfo.UsernameChangeRequest"
+                            "$ref": "#/definitions/user.UsernameChangeRequest"
                         }
                     }
                 ],
@@ -519,7 +487,7 @@
                 }
             }
         },
-        "/userinfo/follow": {
+        "/user/follow/{userId}": {
             "post": {
                 "security": [
                     {
@@ -537,13 +505,11 @@
                 "operationId": "FollowUser",
                 "parameters": [
                     {
-                        "description": "Info about user to follow",
-                        "name": "FollowRequest",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/userinfo.FollowRequest"
-                        }
+                        "type": "string",
+                        "description": "ID of user to follow",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -562,7 +528,7 @@
                 }
             }
         },
-        "/userinfo/unfollow": {
+        "/user/unfollow/{userId}": {
             "post": {
                 "security": [
                     {
@@ -580,13 +546,11 @@
                 "operationId": "UnfollowUser",
                 "parameters": [
                     {
-                        "description": "Info about user to unfollow",
-                        "name": "FollowRequest",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/userinfo.FollowRequest"
-                        }
+                        "type": "string",
+                        "description": "ID of user to unfollow",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -605,14 +569,14 @@
                 }
             }
         },
-        "/userinfo/userprofile": {
+        "/user/{userId}": {
             "get": {
                 "security": [
                     {
                         "Bearer": []
                     }
                 ],
-                "description": "Get the User with the given ID",
+                "description": "Get the User with the given ID. If the ID is left empty, the currently logged in user is retrieved instead",
                 "produces": [
                     "application/json"
                 ],
@@ -626,7 +590,7 @@
                         "type": "string",
                         "description": "ID of the user to retrieve",
                         "name": "userId",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -746,15 +710,7 @@
                 }
             }
         },
-        "userinfo.FollowRequest": {
-            "type": "object",
-            "properties": {
-                "to_follow_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "userinfo.UsernameChangeRequest": {
+        "user.UsernameChangeRequest": {
             "type": "object",
             "properties": {
                 "new_username": {
